# AST-image-processing

./: .gitignore  CMakeLists.txt  Copyright.txt  INSTALL_OPENCV.md  README.md  run-build.sh  run-tests.sh
astimplib/: CMakeLists.txt  VENDOR.md
astimplib/include/: astExceptions.hpp  astimp.hpp  astimp_version.hpp.in  improc-api.hpp  pellet_label_recognition.hpp  pellet_label_tflite_model.hpp  utils.hpp
astimplib/src/: astimp.cpp  debug.hpp  improc-api.cpp  pellet_label_recognition.cpp  pellet_label_recognition_ml.cpp  utils.cpp
doc/python-module/jupyter-notebooks/: add_pellet_hough.ipynb  astimp_functions_detail.ipynb
docker/: Dockerfile  README.md
docs/: .gitignore  .gitignore.swp  ASTimp Quick Start with python.html  _config.yml  index.md
docs/images/: Images-copyright.txt
docs/jupyter lab notebooks/: ASTimp Quick Start with python.ipynb
pellet_labels/: .gitignore  ENSEMBLE.md  README.md  ensemble_evaluation.ipynb  eval_ensemble.py  generate_cpp_model.py  infer.py  package_ensemble.py  requirements.txt  setup.py  test_model.py  tflite_converter.py  train_ensemble.sh
pellet_labels/models/: ab_recognition_i2a_and_amman_data.h5  ab_recognition_i2a_and_amman_data.tflite
pellet_labels/tests/: test_package_ensemble.py
pellet_labels/tests/trainer/: test_model.py
pellet_labels/trainer/: model.py  pellet_list.py  task.py
pellet_labels/util/: gcs_util.py
python-module/: .gitignore  Copyright.txt  astimp.pyx  astimplib.pxd  clean.sh  install_astimp_python_module.sh  requirements.txt  setup.py  test.py
python-module/astimp_tools/: __init__.py  artist.py  datamodels.py  image.py
python-module/jupyter-lab-example/: ASTimp Quick Start with python.ipynb
tests/: CMakeLists.txt  python-module.py  test_utils.cpp
tests/benchmark/: .gitignore  README.md  annotations_use_example.ipynb  benchmark.py  benchmark.sh  benchmark_golden_results.yml  benchmark_in_notebook.ipynb  benchmark_unit_test.py  benchmark_utils.py  inhibition.ipynb  student_method_for_diameters.ipynb  test_benchmark_tools.py  unit_test_golden_results.yaml
tests/benchmark/annotations/amman/: amman_golden.csv  amman_golden.yml  amman_test.csv
tests/benchmark/annotations/amman_evaluation/: amman_evaluation.yaml
tests/benchmark/annotations/creteil/: annotations_SIR.csv  annotations_diam.csv  guiID_blacklisted.csv
tests/benchmark/annotations/creteil_es_test/: Extraction_SIRscan_SIR_2018_2019.csv  Extraction_SIRscan_diameter_2018_2019.csv
tests/benchmark/annotations/phase1_averages/: amman_evaluation_average.yaml
tests/benchmark/annotations/whonet_nada/: SRI_and_diameter_amman.xlsx
tests/benchmark/atb_names/: amman.csv  i2a.csv  whonet.csv
tests/benchmark/benchmark_tools/: __init__.py
tests/benchmark/benchmark_tools/astscript/: __init__.py
tests/benchmark/benchmark_tools/atb_names/: __init__.py
tests/benchmark/benchmark_tools/atb_names/interfaces/: __init__.py
tests/benchmark/benchmark_tools/atb_names/usecases/: __init__.py
tests/benchmark/benchmark_tools/interfaces/: __init__.py  better_abc.py
tests/benchmark/benchmark_tools/usecases/amman/: __init__.py
tests/benchmark/benchmark_tools/usecases/creteil/: __init__.py
tests/benchmark/benchmark_tools/usecases/creteil_es_test/: __init__.py
tests/benchmark/benchmark_tools/usecases/whonet_nada/: __init__.py
tests/benchmark/inhib_diameter_modes/: __init__.py
tests/benchmark/inhib_diameter_modes/count/: __init__.py  count.py
tests/benchmark/inhib_diameter_modes/nlclsq/: __init__.py  nlclsq.py
tests/benchmark/inhib_diameter_modes/op/: __init__.py  op.py
tests/benchmark/inhib_diameter_modes/shared/: __init__.py
tests/benchmark/inhib_diameter_modes/slopeOP/: __init__.py  slopeOP.py
tests/benchmark/inhib_diameter_modes/student/: __init__.py  student.py
tests/benchmark/preprocess_img/: __init__.py  __main__.py  preproc.py
tests/example/: fullExample.cpp
tests/include/: test_config.h.in  test_utils.hpp
tests/unit_tests/: calcDiameterReadingSensibility.cpp  cutPelletsInImage.cpp  findAtbPellets.cpp  improc-api_test.cpp  improcConfig.cpp  isGrowthMediumBlood.cpp  measureDiameters.cpp  pellet_label_recognition_test.cpp  searchOnePellet.cpp
